--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
 			<version>4.1.0</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.librepdf</groupId>
+			<artifactId>openpdf</artifactId>
+			<version>1.3.8</version>
+		</dependency>
+		<dependency>
 			<groupId>org.thymeleaf</groupId>
 			<artifactId>thymeleaf</artifactId>
 			<version>3.0.11.RELEASE</version>
