--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 spring.data.web.pageable.one-indexed-parameters=true
+
+spring.h2.console.enabled=true
